--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-opencv-python==4.1.1.26
+opencv-python== 4.4.0.42
 lxml
 tqdm
 tensorflow==2.3.0rc0
@@ -6,3 +6,4 @@ absl-py
 easydict
 matplotlib
 pillow
+python-dotenv==0.19.2
